--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ h2 a, h2 a:visited {
 
 <p><a href="https://www.octave.org">Acesse o link para <b>GNU Octave</b></a>.</p>
 
-<h2>Contents</h2>
+<h2>Conteúdo</h2>
 <ul>
 <li><a href="#node1">Lista de Exercícios</a></li>
 <li><a href="#node2">Declaração de dados de entrada no octave</a></li>
